--- a/CocoaHeadsNL/CocoaHeadsNL/Base.lproj/Main.storyboard
+++ b/CocoaHeadsNL/CocoaHeadsNL/Base.lproj/Main.storyboard
@@ -32,7 +32,7 @@
         <!--CompaniesContainerView-->
         <scene sceneID="DSP-4d-WSS">
             <objects>
-                <viewController id="xR3-pe-BfX" userLabel="CompaniesContainerView" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="companiesContainerView" id="xR3-pe-BfX" userLabel="CompaniesContainerView" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Gcu-hx-lZu"/>
                         <viewControllerLayoutGuide type="bottom" id="r6W-nH-wUq"/>
@@ -443,7 +443,7 @@
         <!--Jobs-->
         <scene sceneID="L8Q-cp-McQ">
             <objects>
-                <collectionViewController id="p5z-Di-RAg" userLabel="Jobs" customClass="JobsViewController" customModule="CocoaHeadsNL" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController storyboardIdentifier="jobsViewController" id="p5z-Di-RAg" userLabel="Jobs" customClass="JobsViewController" customModule="CocoaHeadsNL" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="Rjy-ez-TrW">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -497,7 +497,7 @@
         <!--Detail View Controller-->
         <scene sceneID="cCC-DU-zZT">
             <objects>
-                <tableViewController id="3uJ-fO-52Q" customClass="DetailViewController" customModule="CocoaHeadsNL" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="detailViewController" id="3uJ-fO-52Q" customClass="DetailViewController" customModule="CocoaHeadsNL" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="ndM-hw-Lr2">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -844,6 +844,6 @@
         <image name="JobsTabIcon" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="cLv-9F-UYt"/>
+        <segue reference="GJd-Rt-qyZ"/>
     </inferredMetricsTieBreakers>
 </document>
